lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:2: error: value <=- is not a member of Double
if(getVitesseY()<=-10){
                ^Lander:3: error: not found: value setPouseeDesiree
	setPouseeDesiree(1)
        ^Lander:6: error: not found: value setPouseeDesiree
	setPouseeDesiree(0)
        ^